# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\Api\AuthController;
+use App\Http\Controllers\Api\TaskController;
 use Illuminate\Support\Facades\Route;
 
 /*
@@ -21,3 +22,5 @@ Route::controller(AuthController::class)->group(function () {
     Route::post('refresh', 'refresh')->middleware("auth:api");
     Route::get('protected', 'protected')->middleware("auth:api");
 });
+
+Route::apiResource("/tasks", TaskController::class)->middleware("auth:api");
